# TDLN-EMGINE

./: .gitignore  FILELIST.json  LICENSE  MEGA_PROVENANCE.json  MEGA_SHA256SUMS.b3  MEGA_SHA256SUMS.sig  MEGA_SHA256SUMS.sig.b64  MEGA_SHA256SUMS.txt  README.md  README_MEGA.md  RELEASE_NOTES.md  SECURITY.md  make_release_artifacts.sh  test_all.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
compliance/: SBOM.spdx.json  THIRD_PARTY_NOTICES.md
conformance/rref-pack/: README.md  rref-v1.1-test-vectors.json  rref-v1.1.schema.json
docs/: HOWTO_HANDLE.md
engine/: MANIFEST.tree.txt  README.md  SUMMARY.json  certified-runtime-wasm.v1.1.sha256  engine-foundation-suite.sha256  integration-pack.v1.1.sha256  ops.sha256  product-docs-and-api.v1.0.0.sha256  rref.v1.1.conformance.sha256  sdk-rust.v1.1-ed25519.sha256  verify_signature_stub.py
engine/certified-runtime-wasm.v1.1/: README.md
engine/certified-runtime-wasm.v1.1/rust/crates/tdln-runner/: Cargo.toml
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-auth/: Cargo.toml
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-auth/schemas/: access.grant.v1.schema.json
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-auth/src/: grant.rs  lib.rs  signing.rs
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-auth/tests/: signing_roundtrip.rs
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-cli/: Cargo.toml
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-cli/src/: main.rs
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-core/: Cargo.toml
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-core/src/: json_atomic.rs  lib.rs  model.rs  providers.rs  registry.rs  runtime.rs
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-core/tests/: json_atomic_golden.rs
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-extras/: Cargo.toml
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-extras/src/: aggregator_kofn.rs  expr_registry.rs  lib.rs  signer_ed25519.rs  sink_filesystem.rs  sink_s3_compatible.rs
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-http/: Cargo.toml  README.md  SMOKE_RUN_WASM.md
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-http/src/: lib.rs  main.rs  presign.rs  presign_s3.rs  server.rs  signer.rs
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-loader/: Cargo.toml
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-loader/src/: lib.rs
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-registry/: Cargo.toml  README.md
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/engine-registry/src/: file_registry.rs  lib.rs  schema.rs
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/tools/receipt-verify/: Cargo.toml  README.md
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/tools/receipt-verify/.cargo/: config.toml
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/tools/receipt-verify/src/: main.rs
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/wrapper-gen/templates/basic/{WRAPPER_NAME_KEBAB}-service/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  openapi.yaml
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/wrapper-gen/templates/basic/{WRAPPER_NAME_KEBAB}-service/.github/workflows/: ci.yml
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/wrapper-gen/templates/basic/{WRAPPER_NAME_KEBAB}-service/src/: config.rs  main.rs
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/wrapper-gen/templates/basic/{WRAPPER_NAME_KEBAB}-service/static/: index.html
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/wrapper-template/__WRAPPER_NAME__-svc/: Cargo.toml
engine/engine-foundation-suite/engine-foundation-suite-v25c-vendored-json-atomic-fixed-PRO/tmp_vend/wrapper-template/__WRAPPER_NAME__-svc/src/: main.rs
engine/integration-pack.v1.1/tdln-rust/crates/tdln-cli/: Cargo.toml
engine/ops/: smoke.sh  verify.sh
engine/product-docs-and-api.v1.0.0/: MANIFEST.json
engine/rref.v1.1.conformance/: rref-v1.1.schema.json
generator/: Makefile  README.md  check_sirp.py  generate.sh
generator/template_base/: .env.example  README.md
generator/workflows/: tdln-ci.yml
keys/: mega_ed25519_pk.pem
kits/certified-runtime-wasm/rust/crates/tdln-runtime-wasm/: Cargo.toml
kits/certified-runtime-wasm/rust/crates/tdln-runtime-wasm/src/: lib.rs
reports/: summary.json
template/: README.md  check_rref.py  openapi.yaml
wrappers/auditoria-api/domain/: Cargo.toml
wrappers/auditoria-api/domain/src/: intake.rs  schema.rs
wrappers/auditoria-api/service/: .env.example  Cargo.toml
wrappers/auditoria-api/service/src/: error.rs  main.rs  state.rs
wrappers/auditoria-api/service/src/routes/: mod.rs
wrappers/auditoria-api/service/src/routes/api/: engine.rs  v1.rs
wrappers/auditoria-api/service/src/routes/middleware/: auth.rs  logging.rs  mod.rs
(+172 files in other folders)
