[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
blake3 = "1.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
domain = { path = "../domain" }
validator = { version = "0.20", features = ["derive"] }
utoipa = "4"
utoipa-swagger-ui = { version = "7", features = ["axum"] }
