[package]
name = "tdln-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tdln-certified-runtime = { path = "../tdln-certified-runtime" }
tdln-runtime-wasm = { path = "../tdln-runtime-wasm" }
