
[package]
name = "engine-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
blake3 = "1"
engine-core = { path = "../engine-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ulid = "1"
ed25519-dalek = { version = "2", features = ["pkcs8"] }

[dev-dependencies]
rand_core = "0.6"
