
[package]
name = "engine-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
engine-core = { path = "../engine-core" }
engine-extras = { path = "../engine-extras" }
engine-registry = { path = "../engine-registry" }
engine-audit = { path = "../engine-audit" }
