
[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ulid = "1"
blake3 = "1"
base64 = "0.22"
glob = "0.3"
thiserror = "1"

[dev-dependencies]
proptest = "1"
