
[package]
name = "engine-extras"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
engine-core = { path = "../engine-core" }

[features]
s3 = ["aws-sdk-s3", "aws-config", "tokio"]
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true, features = ["behavior-version-latest"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros"] }
