
[package]
name = "engine-http"
version = "0.1.0"
edition = "2021"

[dependencies]
engine-loader = { path = "../engine-loader" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
engine-core = { path = "../engine-core" }
engine-extras = { path = "../engine-extras" }
engine-registry = { path = "../engine-registry" }
engine-auth = { path = "../engine-auth" }
engine-audit = { path = "../engine-audit" }


[features]
s3 = ["aws-config", "aws-sdk-s3", "tokio"]

[dependencies.aws-config]
version = "1"
optional = true

[dependencies.aws-sdk-s3]
version = "1"
optional = true
features = ["behavior-version-latest"]


[dependencies]
ed25519-dalek = { version = "2", features=["rand_core"] }
once_cell = "1"
base64 = "0.22"
rand = "0.8"
