
[package]
name = "engine-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
notify = { version = "6", default-features = false, features = ["macos_fsevent","serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
parking_lot = "0.12"
engine-core = { path = "../engine-core" }
