
[package]
name = "engine-registry"
version = "0.1.0"
edition = "2021"

[features]
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
fs = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features=["derive"] }
serde_json = "1"
ulid = "1"
blake3 = "1"
tokio = { version = "1", features=["rt-multi-thread","macros","fs"] }
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
