[package]
name = "tdln-runtime-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
base64 = "0.22"
wasmtime = "24.0.5"
wasmtime-wasi = "24.0.5"
tdln-certified-runtime = { path = "../tdln-certified-runtime" }
