
[package]
name = "receipt-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
zip = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
time = { version = "0.3", features = ["parsing", "formatting"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.cross.target.x86_64-unknown-linux-musl]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-musl:latest"
