
[package]
name = "__WRAPPER_NAME__-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.4"
engine-core = { path = "../../engine-core" }
engine-extras = { path = "../../engine-extras" }
engine-http = { path = "../../engine-http" }  # reuse handlers or mount a proxy
